Fix word wrapping

--- a/public/global.css
+++ b/public/global.css
@@ -115,6 +115,7 @@ button:disabled {
 	border: none;
 	outline: none;
 	font-size: 1.2rem;
+	word-wrap: normal;
 }
 
 a {
